Added more rigorous tests to look at edge cases for network stellar functions.